# HANNRS

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/hannrs_costmap_layers/: InteractionLayerConfig.h  Pass_On_LeftLayerConfig.h  ProxemicsLayerConfig.h  VisibilityLayerConfig.h
catkin_ws/devel/include/hannrs_msgs/: Get_Person.h  Get_PersonRequest.h  Get_PersonResponse.h  Goal.h  InteractionSet.h  InteractionSets.h  People.h  Person.h  Prox_Goal.h  Prox_GoalRequest.h  Prox_GoalResponse.h  VisionDetection.h
catkin_ws/devel/include/hannrs_planners/: Astar_plannerConfig.h  Dijkstra_plannerConfig.h
catkin_ws/devel/include/hannrs_vision/: UndistortConfig.h
catkin_ws/devel/lib/hannrs_kbop/: hannrs_kbop_node
catkin_ws/devel/lib/hannrs_send_goals/: hannrs_send_goals  simple_goal
catkin_ws/devel/lib/hannrs_sim/: exp1  test_hanp  vel_module
catkin_ws/devel/lib/hannrs_tests/: dist_test  paths  paths2  vel_test
catkin_ws/devel/lib/hannrs_vision/: detect_person  omnidetect  test_svm  track  track2  tvchecker  vision_node
catkin_ws/devel/lib/pkgconfig/: hannrs_bags.pc  hannrs_config.pc  hannrs_costmap_layers.pc  hannrs_gazebo_models.pc  hannrs_kbop.pc  hannrs_launch.pc  hannrs_maps.pc  hannrs_msgs.pc  hannrs_planners.pc  hannrs_send_goals.pc  hannrs_sim.pc  hannrs_tests.pc  hannrs_vision.pc  sim_actors_control.pc  sim_interaction_detector.pc  sim_people_tracker.pc
catkin_ws/devel/lib/sim_interaction_detector/: sim_interaction_detector_node
catkin_ws/devel/lib/sim_people_tracker/: sim_people_tracker_node
catkin_ws/src/hannrs_bags/: CMakeLists.txt
catkin_ws/src/hannrs_bags/scripts/: crop_bag.py
catkin_ws/src/hannrs_config/: CMakeLists.txt
catkin_ws/src/hannrs_config/config/: TrajectoryPlannerROS.yaml  costmap_common_params.yaml  dwa_params.yaml  global_costmap_params.yaml  global_map.yaml  hanp_costmap.yaml  hanp_global_costmap.yaml  living_nav.rviz  local_costmap_params.yaml  mbot_costmap_params.yaml  mbot_dwa_params.yaml  mbot_mb_params.yaml  move_base_param.yaml  tpros_working_robot.yaml  trajectory_planner_ros_params.yaml
catkin_ws/src/hannrs_costmap_layers/: CMakeLists.txt  hannrs_costmap_layers_plugin.xml
catkin_ws/src/hannrs_costmap_layers/cfg/: InteractionLayer.cfg  Pass_On_LeftLayer.cfg  ProxemicsLayer.cfg  VisibilityLayer.cfg
catkin_ws/src/hannrs_costmap_layers/include/hannrs_costmap_layers/: interaction_layer.h  pass_on_left_layer.h  proxemics_layer.h  visibility_layer.h
catkin_ws/src/hannrs_costmap_layers/src/: interaction_layer.cpp  pass_on_left_layer.cpp  proxemics_layer.cpp  visibility_layer.cpp
catkin_ws/src/hannrs_gazebo_models/: CMakeLists.txt
catkin_ws/src/hannrs_gazebo_models/models/: database.config
catkin_ws/src/hannrs_gazebo_models/worlds/: gazebo_ISR_testbed.world  home_hallway.world  living_room.world  living_room_wout_people.world  plan_test1.world  plan_test2.world  plan_test3.world  plan_test4.world  (+1 more)
catkin_ws/src/hannrs_kbop/: CMakeLists.txt  package.xml
catkin_ws/src/hannrs_launch/: CMakeLists.txt
catkin_ws/src/hannrs_maps/: CMakeLists.txt  package.xml
catkin_ws/src/hannrs_msgs/: CMakeLists.txt
catkin_ws/src/hannrs_msgs/msg/: Goal.msg  InteractionSet.msg  InteractionSets.msg  People.msg  Person.msg  VisionDetection.msg
catkin_ws/src/hannrs_msgs/srv/: Get_Person.srv  Prox_Goal.srv
catkin_ws/src/hannrs_planners/: CMakeLists.txt  hannrs_planners_plugins.xml  package.xml
catkin_ws/src/hannrs_send_goals/: CMakeLists.txt  package.xml
catkin_ws/src/hannrs_send_goals/src/: publish_goal_topic.cpp  send_goal.cpp  simple_goal.cpp
catkin_ws/src/hannrs_sim/: CMakeLists.txt
catkin_ws/src/hannrs_sim/src/: clicks.cpp  exp1.cpp  robot_test.cpp  vel_module.cpp
catkin_ws/src/hannrs_tests/: CMakeLists.txt  package.xml
catkin_ws/src/hannrs_tests/results/: dist_goal0.txt  dist_goal1.txt  dist_goal2.txt  dist_goal3.txt  dist_goal4.txt  dist_goal5.txt  dist_goal6.txt  dist_goal7.txt  dist_goal8.txt  dist_goal9.txt  vel_module0.txt  vel_module1.txt  vel_module2.txt  vel_module3.txt  vel_module4.txt  vel_module5.txt  vel_module6.txt  vel_module7.txt  vel_module8.txt  vel_module9.txt
catkin_ws/src/hannrs_tests/src/: dist_test.cpp  paths.cpp  paths2.cpp  vel_test.cpp
catkin_ws/src/hannrs_vision/: CMakeLists.txt  package.xml
catkin_ws/src/hannrs_vision/calib/: calib98_results.txt  calib_cam97.yml  calib_cam98.yml  calib_cam99.yml  calib_results.txt  calib_results_cam97.txt  calib_results_cam99.txt  calib_results_cam99_2.yml  cam97_borders.yaml  cam97_world.yaml  cam98_borders.yaml  cam98_world.yaml  cam99_accesspoints.yaml  cam99_borders.yaml  cam99_world.yaml
catkin_ws/src/hannrs_vision/cfg/: Undistort.cfg
catkin_ws/src/hannrs_vision/data/: cam97_classifier.xml  cam97_posdata.txt  cam97_posdata2.txt  cam97_posdata3.txt  cam97_posdata_final.txt  cam97full_classifier.xml  cam97full_classifier2.xml  cam98_classifier.xml  cam98_posdata.txt  cam98_posdata2.txt  cam98full_classifier.xml  cam99_dist0.txt  cam99_dist180.txt  data0_cam98.yaml  test2_cam97.yaml  test3_cam97.yaml  test_cam97.yaml  test_cam98.yaml  testfull2_cam97.yaml  testfull_cam97.yaml  testfull_cam98.yaml  train2_cam97.yaml  train_cam97.yaml  train_cam98.yaml  trainfull2_cam97.yaml  trainfull_cam97.yaml  trainfull_cam98.yaml  trainrob_cam97.yaml  trainrob_cam98.yaml
catkin_ws/src/hannrs_vision/include/hannrs_vision/: people_detector.h  undistort.h
catkin_ws/src/hannrs_vision/launch/: detect_person.launch  omnidetect.launch  people_detector.launch  testmappose.launch  train_svm.launch  tv_check.launch  undistort.launch  undistort2.launch
catkin_ws/src/hannrs_vision/src/: detect_people.cpp  omnidetect.cpp  people_detector.cpp  test_svm.cpp  track.cpp  track2.cpp  tv_check.cpp  undistort.cpp  vision_node.cpp
catkin_ws/src/sim_actors_control/: CMakeLists.txt
catkin_ws/src/sim_interaction_detector/: CMakeLists.txt  package.xml
catkin_ws/src/sim_interaction_detector/src/: interaction_detector.cpp
catkin_ws/src/sim_people_tracker/: CMakeLists.txt
catkin_ws/src/sim_people_tracker/src/: people_tracker.cpp
(+194 files in other folders)
