<?xml version="1.0"?>
<package>
  <name>hannrs_tests</name>
  <version>0.0.0</version>
  <description>The hannrs_tests package</description>
  <maintainer email="mateus@todo.todo">mateus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>opencv2</build_depend> -->
  <build_depend>cv_bridge</build_depend>  
  <build_depend>hannrs_msgs</build_depend>  

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- <run_depend>opencv2</run_depend> -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>hannrs_msgs</run_depend>

  <export>
  </export>
</package>
